# RustEmbeddedHidDevice

./: .cproject  .gdb_history  .gdbinit_old  .project  Cargo.toml  LICENSE  LICENSE-MIT  README.md  gdb  memory.x  rust_itm3 Release.launch  st_nucleo_f4_itm.cfg  stm32f4x.cfg
.cargo/: config
examples/: app.rs  crash.rs  gpio.rs  interrupt.rs  override-an-exception-handler.rs  override-the-panic-handler.rs  panic.rs  semihosting.rs  srp.rs  trust.rs  trust2.rs
hal/: Cargo.toml
hal-core/: Cargo.toml
hal-core/src/: base.rs  dwt.rs  dwt_driver.rs  itm.rs  itm_driver.rs  lib.rs
hal/src/: bt.rs  i2c.rs  lib.rs  spi.rs  usart.rs
src/: interrupts.rs  lang_items.rs  lib.rs
stm32f401/: .project  Cargo.toml
stm32f401/src/: base.rs  exti.rs  gpioa.rs  gpiob.rs  i2c1.rs  lib.rs  rcc.rs  spi1.rs
trust/: Cargo.toml
trust/src/: USART2.rs  lib.rs  macros.rs  trust.rs
