[package]
authors = ["Per Lindgren <per.lindgren@ltu.se>"]
build = "build.rs"
name = "jap"
version = "0.1.0"

[dependencies]
r0 = "0.2.0"
hal-core = { path = "hal-core" }
stm32f401 = { path = "stm32f401" }
trust = { path = "trust" }
volatile-register = "0.1.2"
#interpolate_idents = "*"
hal = {path = "hal"}

[dependencies.cortex-m-srp]
git= "https://github.com/japaric/cortex-m-srp"

# [dependencies.cortex-m-semihosting]
[dependencies.cortex-m]
branch = "svd2rust"
git = "https://github.com/japaric/cortex-m"

[dependencies.compiler_builtins]
features = ["mem"]
git = "https://github.com/rust-lang-nursery/compiler-builtins"

[features]
semihosting = ["cortex-m/semihosting"]

[profile.release]
#lto = true
debug = true
